@@ -1,0 +1,1 @@
+# todo: add a method to do this in a supervised fashion!#' Merges smallest levels of a factor into a new level until it exceeds#' a certain size. #'#' @param x [\code{factor} | \code{character}]\cr #'   A character will be treated as a factor.   #' @param min.perc [\code{numeric(1)}]\cr #'   The smallest levels of the factor are merged until their combined proportion #'   w.r.t. the length of the factor exceeds \code{min.perc}.#'   Must be between 0 and 1. Default is 0.01. #' @param new.name [\code{character(1)}]\cr #'   New name of merged level. Default is 'merged'. #' @return \code{factor}, where merged levels are comined into a new level of name \code{new.name}.#' #' @export#' @title Merges small levels of a factor into a new level. mergeFactorLevelsBySize = function(x, min.perc=0.01, new.name="merged") {  if (!(is.factor(x) || is.character(x)))    stop("x must be a factor or character!")  x = as.factor(x)    checkArg(min.perc, "numeric", 1)  if (min.perc >=1 || min.perc < 0)    stop("min.perc must be between 0 and 1")  checkArg(new.name, "character", 1)  if (new.name %in% levels(x))    stop("Value of 'new.name' is already a level of x!")    tab = sort(prop.table(table(x)))  cs = cumsum(tab)  j = Position(function(x) x > min.perc, cs)  if(j > 1) {    merge = names(tab[1:j])    levels(x)[levels(x) %in% merge] = new.name  }  return(x)}
